# focalize

./: .config_var.in  .configure_coq_validation  .configure_distribution  .cvsignore  .distribution_var.in  .gitignore  .gitmodules  .project_config_var  AUTHORS  Announce  CHANGES  INSTALL  LICENSE  Makefile  Makefile.common  Makefile.config  Makefile.distribution  Makefile.rules  Makefile.utils  README  README_FOR_DEVELOPERS  README_FOR_DEVELOPERS.html  TODO  configure  files-for-distrib.lst  opam
focalizec/: .config_var.in  .configure  .cvsignore  .gitignore  .project_config_var  Makefile  Makefile.common  Makefile.config  TAGS  TODO  configure  configure.in  tmp_basics.bak  tmp_basics.v
focalizec/doc_src/: .cvsignore  Makefile
focalizec/doc_src/html/: Makefile  Makefile.html
focalizec/doc_src/man/: .cvsignore  Makefile  focalizec.1  focalizec.env  focalizec.man  focalizedep.1  focalizedep.env  focalizedep.man  focalizetest.1  focalizetest.man
focalizec/doc_src/tex/: Makefile
focalizec/emacs/: focalize.el
focalizec/src/attic/: ast.mli  (+7 more)
focalizec/tests/: .cvsignore  .gitignore  Makefile  baby_toy.foc  bad_self_use.foc  basics.foc  in_example.foc  in_example2.foc  ko__bad_self_use.fcl  ko__final_def1.fcl  ko__final_def2.fcl  ko__final_def3.fcl  ko__ill_formed2.fcl  ko__param_toy.fcl  ko__test_error.fcl  ko__test_rec.fcl  list.foc  need_re_ordering.foc  od_even.foc  ok__baby_toy.fcl  ok__baby_toy_coq_externals.v  ok__baby_toy_externals.ml  ok__bug18.fcl  ok__caveat.fcl  ok__coll_gen_llifts_on_non_remapped.fcl  ok__coll_gen_llifts_on_non_remapped2.fcl  ok__coll_outside.fcl  ok__definition_72_rule_PRM.fcl  ok__definition_72_rule_PRM_miss_subst.fcl  ok__final_def1.fcl  ok__final_def2.fcl  ok__final_def3.fcl  ok__in_example.fcl  ok__in_example2.fcl  ok__list.fcl  ok__llift_rec_meth_paramed.fcl  ok__multiple_inherit.fcl  ok__multiple_inherit.v  ok__need_inspect_self.fcl  ok__need_re_ordering.fcl  (+25 more)
(+984 files in other folders)
